--- a/src/styles.css
+++ b/src/styles.css
@@ -80,6 +80,10 @@ body {
 .status {
   margin-bottom: 10px;
 }
+.game {
+  display: flex;
+  flex-direction: row;
+}
 
 .game-info {
   margin-left: 20px;
